Oppdaterer Swagger med format på feilsituasjoner 📑
